--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
+    <link rel="stylesheet" href="01-style.css">
+    <style>
+          p {color: white; background-color: green; font-size: 18px;}
+    </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="background-color: orange; height: 30px; width: 150px; font-size: 18px; font-weight: 700;">Inline Method</button>
   </body>
 </html>
